--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation "com.github.moxy-community:moxy:2.2.1"
     implementation "com.github.moxy-community:moxy-ktx:2.1.2"
     implementation "com.github.moxy-community:moxy-androidx:2.1.2"
+    implementation 'androidx.preference:preference:1.1.1'
     kapt "com.github.moxy-community:moxy-compiler:2.1.2"
     implementation 'com.github.terrakok:cicerone:6.6'
 
