--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
     <application
         android:name="com.mas.weather_kotlin.ui.App"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_weather_icon_png"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_weather_icon_png"
         android:supportsRtl="true"
         android:theme="@style/Theme.Weather.NoActionBar">
         <activity android:name="com.mas.weather_kotlin.ui.activity.MainActivity">
