--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 # Project exclude paths
 /.gradle/
+/app/build/generated/ap_generated_sources/debug/out/
+/app/build/generated/source/buildConfig/debug/
+/app/build/generated/source/kaptKotlin/debug/
+/app/build/generated/source/kapt/debug/
+/.idea/
